external-crates/move/crates/move-compiler/tests/move_check/parser/borrow_mut_space.move
module a::m {
    struct S {
        f: u64,
    }
    public fun foo(x: &mut S): &mut u64 {
        & mut x.f
    }
}
